# AnalyticsTool

./: CMakeLists.txt  circle.cpp  circle.h  controller.cpp  controller.h  dataset.cpp  dataset.h  figure.cpp  figure.h  listobjectsviewcontroller.cpp  listobjectsviewcontroller.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.h  paintscene.cpp  paintscene.h  picture.cpp  picture.h  rectangle.cpp  rectangle.h  square.h
controller/: controller.cpp  controller.h
gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  paintscene.cpp  paintscene.h  rectangle.cpp  rectangle.h
icons/: res.qrc
include/: analyticsexception.h  constants.h
model/: dataset.cpp  dataset.h  model.cpp  model.h  picture.cpp  picture.h
utils/: analyticsexception.cpp  utils.cpp  utils.h
